--- a/AtkTennisWeb/Views/AdminHome/ReservationDebtOperations.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/ReservationDebtOperations.cshtml
@@ -90,12 +90,14 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog " role="document">
         <div class="modal-content">
+
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Ödeme Al</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
+
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
@@ -103,6 +105,7 @@
                             <div class="card-body">
                                 <table class="table table-bordered " style=" margin-bottom: 0;">
                                     <tbody>
+
                                         <tr class="note note-danger">
                                             <td style="vertical-align:middle;width: 112px;">Ödeme Tipi:</td>
                                             <td style="">
@@ -142,7 +145,8 @@
 
             <div id="paidOp" class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Vazgeç</button>
-                <button type="button" class="btn btn-primary" onclick="getPaidOperations(this.id)">Ödeme Al</button>
+                <button type="button" class="btn btn-primary" onclick="
+                        rations(this.id)">Ödeme Al</button>
             </div>
 
         </div>
@@ -375,9 +379,9 @@
 
                             var totalPrice = 0;
 
-                            for (var i = 0; i < res.reservationslength; i++) {
+                            for (var i = 0; i < res.reservations.length; i++) {
 
-                                if (res.reservations[i].companyId == compId) {
+                                if (res.reservations[i].companyId == compId && res.reservations[i].priceInf == false) {
 
                                     var firstPrice = res.reservations[i].price;
                                     var totalPrice = firstPrice + totalPrice;
@@ -388,7 +392,7 @@
                             row += '<div id="asd" class="card-body ">';
                             row += '<div class="d-flex justify-content-between">';
                             row += '<h4 style="margin-bottom:30px">Rezervasyon Borçları</h4>';
-                            row += '<h4 style="margin-bottom:30px">Toplam Rezervasyon Borcu :' + totalPrice + '  ₺</h4>';
+                            row += '<h4 style="margin-bottom:30px">Toplam Rezervasyon İptal Borcu :' + totalPrice + '  ₺</h4>';
                             row += '</div>';
                             row += '<table id="resList" class="table table-bordered table-hover">';
                             row += '<thead>';
@@ -450,10 +454,10 @@
 
                             for (var i = 0; i < res.reservationCancels.length; i++) {
 
-                                if (res.reservationCancels[i].companyId == compId) {
+                                if (res.reservationCancels[i].companyId == compId && res.reservationCancels[i].priceInf == false && res.reservationCancels[i].procedure == false) {
 
                                     var firstPrice2 = res.reservationCancels[i].price;
-                                    var totalPrice2 = firstPrice2  + totalPrice2;
+                                    var totalPrice2 = firstPrice2 + totalPrice2;
                                 }
                             }
 
