--- a/AtkTennisWeb/Views/AdminHome/AllReservationCancelList.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/AllReservationCancelList.cshtml
@@ -68,7 +68,7 @@
 
                     <div class="portlet-body">
                         <div class="portlet light" style="padding: 15px;">
-                            <div class="alert alert-info" style="margin-bottom: 0; background-color:#b7003c">
+                            <div class="alert alert-info" style="margin-bottom: 0; background-color:#343a40">
                                 <strong>Rezervasyon İptal Listesi!</strong> İlgili tarih bilgisini bularak işleme devam ediniz.
                             </div>
                         </div>
