--- a/AtkTennisWeb/Views/AdminHome/TotalSystemUsers.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/TotalSystemUsers.cshtml
@@ -40,7 +40,7 @@
 
                 <div class="col-md-12">
                     <div class="card">
-                        <section style="background-color:#408000c4; color:white;" class="content">
+                        <section style="background-color:#343a40; border-radius:15px; color:white;" class="content">
                             <div class="container-fluid">
                                 <div style="margin-top:10px" class="media-body">
                                     <h3>Aktif Kullanıcı Listeleri</h3>
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="card">
-                        <section class="content" style="background-color: #c10036;color: white;">
+                        <section class="content" style=" background-color:#343a40; border-radius:15px; color: white;">
                             <div class="container-fluid">
                                 <div style="margin-top:10px" class="media-body">
                                     <h3>Pasif Kullanıcı Listeleri</h3>
