--- a/AtkTennisWeb/Views/Public/SignIn.cshtml
+++ b/AtkTennisWeb/Views/Public/SignIn.cshtml
@@ -184,7 +184,7 @@
 
         $('body').loading({
 
-            theme: 'dark',
+            theme: 'light',
             stoppable: false,
             message: '<div><img src="../images/atkimg/spinner4.gif" style="width:100px;" /></div>'
 
