--- a/AtkTennisWeb/Views/SystemSettings/EducationSchoolSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/EducationSchoolSettings.cshtml
@@ -1,5 +1,12 @@
 ﻿@model Helpers.Dto.PartialViewDtos.EducationSettingsViewDto;
 
+@if (Mutuals.M6 == false)
+{
+
+}
+else
+{
+
     <style>
 
         button {
@@ -734,3 +741,4 @@
         document.getElementById("defaultOpen").click();
 
     </script>
+}
