--- a/AtkTennisWeb/Views/AdminHome/DuesDebtOperations.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/DuesDebtOperations.cshtml
@@ -57,7 +57,7 @@
 
                     <div class="portlet-body">
                         <div class="portlet light" style="padding: 15px;">
-                            <div class="alert alert-info" style="margin-bottom: 0; background-color:#b7003c">
+                            <div class="alert alert-info" style="margin-bottom: 0; background-color:#343a40">
                                 <strong>Rezervasyon Ödemesi!</strong> İlgili üye bilgisini bularak işleme devam ediniz.
                             </div>
                         </div>
