--- a/AtkTennisWeb/Views/AdminHome/MultiReservations.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/MultiReservations.cshtml
@@ -137,13 +137,13 @@
                 <div class="portlet-body col-md-8">
 
                     <div class="portlet light" style="padding: 15px;">
-                        <div class="alert alert-info" style="margin-bottom: 0; background-color:#b7003c">
+                        <div class="alert alert-info" style="margin-bottom: 0; background-color:#343a40">
                             <strong>Çoklu Rezervasyon Yap!</strong> İlgili Alanları Doldurarak İşleme Devam Ediniz.                            
                         </div>
                     </div>
 
                     <div class="portlet light" style="padding: 15px;">
-                        <div class="alert alert-info" style="margin-bottom: 0; background-color:#b7003c">          
+                        <div class="alert alert-info" style="margin-bottom: 0; background-color:#343a40">          
                             <strong>Önemli!</strong> Gün Bilgileri Boş Bırakılamaz.. Seçtiğiniz Tarihler arasındaki hangi günlere rezervasyon yapmak istiyorsanız lütfen işaretleyiniz !
                         </div>
                     </div>
