--- a/AtkTennisWeb/Views/SystemSettings/IdentityRoleSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/IdentityRoleSettings.cshtml
@@ -16,6 +16,7 @@
 
 
 <div class="content-wrapper">
+
     <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
@@ -42,9 +43,9 @@
                             <div class="card-title">
                                 <h3>Rol Düzenle</h3>
                             </div>
-                            <div>
+                            @*<div>
                                 <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#addRole"><i class="fas fa-plus-square"></i></button>
-                            </div>
+                            </div>*@
                         </div>
 
                         <div class="card-body">
@@ -63,10 +64,10 @@
                                         {
                                             <tr style="text-align:center" id="">
                                                 <td>@Model.appIdentityRoles[i].Name</td>
-                                                <td>
+                                                @*<td>
                                                     <button class="btn btn-warning" id="@Model.appIdentityRoles[i].Id" onclick="openUpdateRoleModal(this.id)"><i class="fas fa-edit"></i></button>
                                                     <button class="btn btn-danger" id="@Model.appIdentityRoles[i].Id" onclick="deleteOpenModal(this.id)"><i class="fas fa-trash"></i></button>
-                                                </td>
+                                                </td>*@
 
                                             </tr>
                                         }
